
Fri Mar 21 15:13:42 CET 2003

	- Made sure preprocessor accepts new datatypes.
	- Do not free prepared statements at the end of a transaction.


Thu Mar 27 15:23:58 CET 2003

	- Some more updates to pgtypeslib.
	- Set optimization to -O1 until I find the reason why code is broken
	  with -O2.

Sat Mar 29 22:03:16 CET 2003

	- Moved Informix compatibility stuff its own library.
	- Added interval datetypes.

Sun Mar 30 13:43:13 CEST 2003

	- Interval datetype now fully functional.

Tue Apr  8 14:03:32 CEST 2003

	- Added rstrdate function.
	- Made Informix mode honor environment variable to set dbname to
	  connect to.

Thu May  1 14:54:41 CEST 2003

	- Enable more Informix shortcuts.
	- Added option '-i' to parse files included via cpp diretive as well.

Fri May  2 16:37:06 CEST 2003

	- Fixed double definition of compat_mode.

Tue May  6 11:51:33 CEST 2003

	- Added rfmtlong compatibility function.

Tue May 13 13:34:12 CEST 2003

	- Fixed order of include search path.
	
Wed May 14 13:05:49 CEST 2003

	- Added more compatibility functions.
	- Accept CPP defines for type definitions.
	- Do not parse system include files automatically for Informix mode

Fri May 16 11:45:50 CEST 2003

	- Fixed include in pgtypeslib to not include c.h

Fri May 16 13:32:10 CEST 2003

	- Made double variables work again.
	
Mon May 19 09:22:40 CEST 2003

	- Fixed exec sql ifdef command.

Tue May 20 11:47:00 CEST 2003

	- Reversed my fix for ifdef. It was the example, not ecpg which was
	  incorrect.
	- Changed DBPATH variable to PG_DBPATH.
	
Thu May 22 09:33:54 CEST 2003

	- ecpg now recognizes named struct/union usage.

Fri May 23 11:46:15 CEST 2003

	- Synced parser and keyword table.
	- ecpg now accepts array elements as input variables.

Tue May 27 13:29:28 CEST 2003

	- Fixed incorrect output for some structs.
	- Set ecpg version to 2.12.0.
	- Set ecpg library to 3.4.2.
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0
